move to images folder

--- a/index.html
+++ b/index.html
@@ -72,19 +72,19 @@
       <section class="third-section">
         <div class="herald-tiles">
           <div id="tile1" class="tile">
-            <img src="/images/tiles/school.png" />
+            <img src="/images/school.png" />
             <p>Iskola</p>
           </div>
           <div id="tile2" class="tile">
-            <img src="/images/tiles/solidarity.png" />
+            <img src="/images/solidarity.png" />
             <p>Személyes törődés</p>
           </div>
           <div id="tile3" class="tile">
-            <img src="/images/tiles/sports.png" />
+            <img src="/images/sports.png" />
             <p>Sport</p>
           </div>
           <div id="tile4" class="tile">
-            <img src="/images/tiles/teamwork.png" />
+            <img src="/images/teamwork.png" />
             <p>Összetartozás</p>
           </div>
         </div>
@@ -108,7 +108,7 @@
             támogatja a minőségi jezsuita nevelést és oktatást! Adószám:
             18436501-1-05",
           </div>
-          <img src="/images/news/egyszazalek.jpg" class="news-img" />
+          <img src="/images/egyszazalek.jpg" class="news-img" />
         </div>
 
         <div class="news-container">
@@ -125,7 +125,7 @@
             megújulást, azokat a feltételeket, amelyek érzelmi és fizikai
             biztonságot nyújtanak, valamint eredményes tanuláshoz vezetnek...
           </div>
-          <img class="news-img" src="/images/news/ferencatya.jpg" />
+          <img class="news-img" src="/images/ferencatya.jpg" />
         </div>
 
         <div class="news-container">
@@ -158,11 +158,7 @@
             visszafojthatatlan derültség követte.
           </div>
 
-          <img
-            class="news-img"
-            src="/images/news/ballagas.jpg"
-            alt="ballagas"
-          />
+          <img class="news-img" src="/images/ballagas.jpg" alt="ballagas" />
         </div>
 
         <div class="news-container">
@@ -180,7 +176,7 @@
             először hazai pályán adhatnak vért.
           </div>
 
-          <img class="news-img" src="/images/news/veradok.jpg" />
+          <img class="news-img" src="/images/veradok.jpg" />
         </div>
 
         <div class="news-container">
@@ -191,7 +187,7 @@
             Leánykollégiumába. A részletes pályázati kiírás classE KATTINTVA
             megtekinthető. Hatá classő május 27.
           </div>
-          <img class="news-img" src="/images/news/nevelo.jpg" />
+          <img class="news-img" src="/images/nevelo.jpg" />
         </div>
       </section>
 
