--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
   <body>
     <div class="root">
       <div class="header">
-        <img src="images/news/cimer.jpg" alt="herald" />
+        <img src="images/cimer.jpg" alt="herald" />
         <h1>Fényi Gyula Jezsuita Gimnázium, Kollégium és Óvoda</h1>
       </div>
 
