--- a/index.html
+++ b/index.html
@@ -72,11 +72,11 @@
       <section class="third-section">
         <div class="herald-tiles">
           <div id="tile1" class="tile">
-            <img src="/images/school.png" />
+            <img src="./images/school.png" />
             <p>Iskola</p>
           </div>
           <div id="tile2" class="tile">
-            <img src="/images/solidarity.png" />
+            <img src="./images/solidarity.png" />
             <p>Személyes törődés</p>
           </div>
           <div id="tile3" class="tile">
@@ -84,7 +84,7 @@
             <p>Sport</p>
           </div>
           <div id="tile4" class="tile">
-            <img src="/images/teamwork.png" />
+            <img src="./images/teamwork.png" />
             <p>Összetartozás</p>
           </div>
         </div>
@@ -108,7 +108,7 @@
             támogatja a minőségi jezsuita nevelést és oktatást! Adószám:
             18436501-1-05",
           </div>
-          <img src="/images/egyszazalek.jpg" class="news-img" />
+          <img src="./images/egyszazalek.jpg" class="news-img" />
         </div>
 
         <div class="news-container">
@@ -158,7 +158,7 @@
             visszafojthatatlan derültség követte.
           </div>
 
-          <img class="news-img" src="/images/ballagas.jpg" alt="ballagas" />
+          <img class="news-img" src="./images/ballagas.jpg" alt="ballagas" />
         </div>
 
         <div class="news-container">
@@ -176,7 +176,7 @@
             először hazai pályán adhatnak vért.
           </div>
 
-          <img class="news-img" src="/images/veradok.jpg" />
+          <img class="news-img" src="./images/veradok.jpg" />
         </div>
 
         <div class="news-container">
@@ -187,7 +187,7 @@
             Leánykollégiumába. A részletes pályázati kiírás classE KATTINTVA
             megtekinthető. Hatá classő május 27.
           </div>
-          <img class="news-img" src="/images/nevelo.jpg" />
+          <img class="news-img" src="./images/nevelo.jpg" />
         </div>
       </section>
 
