--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
             <p>Személyes törődés</p>
           </div>
           <div id="tile3" class="tile">
-            <img src="/images/sports.png" />
+            <img src="./images/sports.png" />
             <p>Sport</p>
           </div>
           <div id="tile4" class="tile">
