--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
             megújulást, azokat a feltételeket, amelyek érzelmi és fizikai
             biztonságot nyújtanak, valamint eredményes tanuláshoz vezetnek...
           </div>
-          <img class="news-img" src="/images/ferencatya.jpg" />
+          <img class="news-img" src="./images/ferencatya.jpg" />
         </div>
 
         <div class="news-container">
