--- a/index.html
+++ b/index.html
@@ -130,10 +130,7 @@
 
         <div class="news-container">
           <div class="news-date">2022.04.28</div>
-          <div class="news-header">
-            Kollégiumi ballagás - bensőséges ünnepléssel köszöntek el a végzős
-            kollégisták
-          </div>
+          <div class="news-header">Kollégiumi ballagás</div>
 
           <div class="news-content">
             Otthon, hétvégén két kistesót kell kerülgetned, hogy bejuss a
