--- a/index.html
+++ b/index.html
@@ -95,10 +95,7 @@
 
         <div class="news-container">
           <div class="news-date">2022.04.08</div>
-          <div class="news-header">
-            Az is rendelkezhet adója 1%-áról aki teljes adóvisszatérítésben
-            részesült!
-          </div>
+          <div class="news-header">Rendelkezés az adó 1%-ról</div>
           <div class="news-content">
             Kérjük támogatóinkat, hogy május 20-ig rendelkezzenek adójuk
             1%-áról! A felajánlás lehetősége abban az esetben is fennáll, ha Ön
